--- a/spreedly/templates/subscriptions.html
+++ b/spreedly/templates/subscriptions.html
@@ -50,7 +50,7 @@
 
 		{% if not request.user.is_authenticated %}
 			<h3>Subscribe</h3>
-			<form action="." method="post">
+			<form action="." method="post">{% csrf_token %}
 				{{ form.as_table }}
 				<p><input type="submit" value="Continue &rarr;"></p>
 			</form>
